# comprehensive-rust

./: .bazelrc  .bazelversion  .gitattributes  .gitignore  BUILD.bazel  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE-CC-BY  MODULE.bazel  Makefile  NOTES.txt  PATCH-SYSTEM.md  README.md  REPO.bazel  STYLE.md  TRANSLATIONS.md  _typos.toml  aspect-ratio-helper.py  backdated_sources.bzl  book.toml  build-exercise-templates.sh  compare.sh  comprehensive_rust.bzl  dprint.json  ga4.js  install-mdbook.sh  language-picker.css  lunr.ko.js  lunr.stemmer.support.js  mermaid.min.js  messages.mo  package.json  rustfmt.toml  speaker-notes.css  speaker-notes.js  svgbob.css  tool_hub.bzl
cloud-translate/: Cargo.toml
cloud-translate/src/: main.rs
exerciser/: Cargo.toml  README.md
exerciser/src/: lib.rs  main.rs
mdbook-course/: BUILD.bazel  Cargo.toml  README.md
mdbook-course/src/: course.rs  frontmatter.rs  lib.rs  main.rs  markdown.rs  replacements.rs  timing_info.rs
mdbook-exerciser/: BUILD.bazel  Cargo.toml  README.md
mdbook-exerciser/src/: lib.rs  main.rs
mdbook-slide-evaluator/: Cargo.toml  README.md
mdbook-slide-evaluator/src/: evaluator.rs  lib.rs  main.rs  slides.rs
po/: ar.po  (+33 more)
src/android/testing/: Android.bp  BUILD.bazel  Cargo.toml  googletest.md  googletest.rs  mockall.rs  mocking.md
src/android/testing/src/: lib.rs
src/bare-metal/alloc-example/: BUILD.bazel  Cargo.toml  rust-toolchain.toml
src/bare-metal/alloc-example/.cargo/: config.toml
src/bare-metal/alloc-example/src/: main.rs
src/bare-metal/aps/examples/: BUILD.bazel  Cargo.toml  Makefile  build.rs  entry.S  exceptions.S  idmap.S  image.ld  run_test.sh
src/bare-metal/aps/examples/src/: asm.rs  entry.S  exceptions.S  exceptions.rs  exceptions_rt.rs  idmap.S  logger.rs  main.rs  main_improved.rs  main_logger.rs  main_minimal.rs  main_psci.rs  main_rt.rs  main_safemmio.rs  pl011.rs  pl011_minimal.rs  pl011_struct.rs  uart.rs
src/bare-metal/microcontrollers/examples/: BUILD.bazel  Cargo.toml  Embed.toml  memory.x
src/bare-metal/microcontrollers/examples/.cargo/: config.toml
src/bare-metal/useful-crates/allocator-example/: BUILD.bazel  Cargo.toml
src/bare-metal/useful-crates/allocator-example/src/: main.rs
src/bare-metal/useful-crates/zerocopy-example/: BUILD.bazel  Cargo.toml
src/bare-metal/useful-crates/zerocopy-example/src/: main.rs
src/concurrency/async/: Cargo.toml  async-await.md  futures.md  runtimes.md  state-machine.md  tasks.md  tasks.rs
src/concurrency/async-control-flow/: Cargo.toml  channels.md  channels.rs  join.md  join.rs  select.md  select.rs
src/concurrency/async-exercises/chat-async/: BUILD.bazel  Cargo.toml
src/concurrency/async/runtimes/: tokio.md
src/concurrency/async/state-machine/: recursion.md
src/concurrency/sync-exercises/: BUILD.bazel  Cargo.toml  dining-philosophers.md  dining-philosophers.rs  link-checker.md  link-checker.rs  solutions.md
src/error-handling/: BUILD.bazel  Cargo.toml  anyhow.md  converting-error-types-example.md  converting-error-types.md  deriving-error-enums.md  dynamic-errors.md  error-contexts.md  error.md  exercise.md  exercise.rs  panic-unwind.md  panics.md  result.md  solution.md  thiserror-and-anyhow.md  thiserror.md  try-conversions.md  try-operator.md  try.md
src/exercises/: Cargo.toml  solutions.md
src/exercises/android/: morning.md
src/exercises/bare-metal/: afternoon.md  compass.md  morning.md  rtc.md  solutions-afternoon.md  solutions-morning.md  temperature-logger.md
src/exercises/bare-metal/compass/: BUILD.bazel  Cargo.toml  Embed.toml
src/exercises/bare-metal/rtc/: BUILD.bazel  Cargo.toml  Makefile  build.rs  entry.S  memory.ld  rtc_test.sh
src/exercises/bare-metal/temperature-logger/: Cargo.toml
src/exercises/chromium/: bringing-it-together.md  build-rules.md  interoperability-with-cpp.md  solutions.md  testing.md  third-party.md
src/exercises/concurrency/: afternoon.md  chat-app.md  dining-philosophers-async.md  dining-philosophers-async.rs  dining-philosophers.md  dining-philosophers.rs  elevator.md  link-checker.md  link-checker.rs  morning.md  solutions-afternoon.md  solutions-morning.md
src/exercises/concurrency/chat-async/: Cargo.toml
src/exercises/concurrency/elevator/: Cargo.toml
src/exercises/day-1/: afternoon.md  book-library.md  book-library.rs  for-loops-bonus.rs  for-loops.md  for-loops.rs  implicit-conversions.md  iterators-and-ownership.md  luhn.md  luhn.rs  morning.md  pattern-matching.md  pattern-matching.rs  solutions-afternoon.md  solutions-morning.md
src/exercises/day-2/: afternoon.md  binary-tree.md  book-library.md  book-library.rs  health-statistics.md  iterators-and-ownership.md  luhn.md  luhn.rs  morning.md  points-polygons.md  points-polygons.rs  solutions-afternoon.md  solutions-morning.md  strings-iterators.md  strings-iterators.rs
src/exercises/day-3/: afternoon.md  morning.md  points-polygons.rs  safe-ffi-wrapper.md  safe-ffi-wrapper.rs  simple-gui.md  simple-gui.rs  solutions-afternoon.md  solutions-morning-points-polygons.md  solutions-morning-simple-gui.md  solutions-morning.md
src/exercises/day-4/: afternoon.md  android.md  async-elevator.md  async.md  dining-philosophers.md  dining-philosophers.rs  link-checker.md  morning.md  solutions-morning.md
src/exercises/webassembly/: camera.md  game-of-life.md  solutions-camera.md  solutions-game-of-life.md  webassembly.md
src/rust-wasm-template/project/: Cargo.toml
src/rust-wasm-template/project/src/: lib.rs
src/testing/: BUILD.bazel  Cargo.toml  doc-tests.md  docs.md  exercise.md  exercise.rs  googletest.md  integration-tests.md  lints.md  mockall.rs  mocking.md  other.md  solution.md  test-modules.md  unit-tests.md  useful-crates.md  useful_crates.md
src/unsafe-rust/: BUILD.bazel  Cargo.toml  calling-unsafe-functions.md  dereferencing.md  exercise.md  exercise.rs  mutable-static.md  solution.md  static-and-const.md  unions.md  unsafe-extern-c-functions.md  unsafe-functions.md  unsafe-rust-functions.md  unsafe-traits.md  unsafe.md
src/unsafe-rust/unsafe-functions/: calling.md  extern-c.md  rust.md
(+1158 files in other folders)
