[workspace]
# Please keep the workspace members sorted.
members = [
  "mdbook-course",
  "mdbook-exerciser",
  "src/bare-metal/useful-crates/allocator-example",
  "src/bare-metal/useful-crates/zerocopy-example",
  "src/borrowing",
  "src/control-flow-basics",
  "src/error-handling",
  "src/exercises",
  "src/exercises/concurrency/chat-async",
  "src/generics",
  "src/iterators",
  "src/memory-management",
  "src/methods-and-traits",
  "src/modules",
  "src/pattern-matching",
  "src/references",
  "src/slices-and-lifetimes",
  "src/smart-pointers",
  "src/std-traits",
  "src/std-types",
  "src/testing",
  "src/tuples-and-arrays",
  "src/types-and-values",
  "src/unsafe-rust",
  "src/user-defined-types",
  "third_party/cxx/blobstore",
]
resolver = "2"
