[workspace]
# Please keep the workspace members sorted.
members = [
  "mdbook-course",
  "mdbook-exerciser",
  "mdbook-slide-evaluator",
  "src/android/testing",
  "src/bare-metal/useful-crates/allocator-example",
  "src/bare-metal/useful-crates/zerocopy-example",
  "src/borrowing",
  "src/control-flow-basics",
  "src/error-handling",
  "src/concurrency/sync-exercises",
  "src/concurrency/async-exercises/chat-async",
  "src/generics",
  "src/iterators",
  "src/lifetimes",
  "src/memory-management",
  "src/methods-and-traits",
  "src/modules",
  "src/pattern-matching",
  "src/references",
  "src/smart-pointers",
  "src/std-traits",
  "src/std-types",
  "src/testing",
  "src/tuples-and-arrays",
  "src/types-and-values",
  "src/unsafe-rust",
  "src/user-defined-types",
  "third_party/cxx/blobstore",
]
resolver = "2"
