module(
    name = "comprehensive-rust",
    version = "0.1.0",
)

bazel_dep(name = "rules_rust", version = "0.70.0")
bazel_dep(name = "rules_rust_mdbook", version = "0.70.0")
bazel_dep(name = "rules_shell", version = "0.8.0")
bazel_dep(name = "toml.bzl", version = "0.4.1")
bazel_dep(name = "yaml.bzl", version = "0.1.2")

# TODO: remove when https://github.com/bazelbuild/rules_rust/pull/4027
# is released, likely in version 0.71.0.
git_override(
    module_name = "rules_rust",
    commit = "2fd73117cd996410be45259cd95b12c7688226fb",
    remote = "https://github.com/bazelbuild/rules_rust.git",
)

git_override(
    module_name = "rules_rust_mdbook",
    commit = "2fd73117cd996410be45259cd95b12c7688226fb",
    remote = "https://github.com/bazelbuild/rules_rust.git",
    strip_prefix = "extensions/mdbook",
)

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

register_toolchains("//:mdbook_toolchain")

rust_host_tools = use_extension("@rules_rust//rust:extensions.bzl", "rust_host_tools")
rust_host_tools.host_tools(
    name = "rust_host_tools_nightly",
    sha256s = {
        "2025-09-01/cargo-nightly-x86_64-unknown-linux-gnu.tar.xz": "9a701f2eb103703c018518066fa7deb476f7ebab548b1c4e2ea0df81ee42a20f",
        "2025-09-01/clippy-nightly-x86_64-unknown-linux-gnu.tar.xz": "a55b532605896ed0a22f44d68c4eba8ba0ad66ea0f62f3c62469b0a3d01ab19c",
        "2025-09-01/llvm-tools-nightly-x86_64-unknown-linux-gnu.tar.xz": "a0da791e41770b888c60ef74a0c63c5f6fe11bddb2a8fa88075341a9acb442a6",
        "2025-09-01/rust-std-nightly-x86_64-unknown-linux-gnu.tar.xz": "b3c2d890d9405285e015ab4ceb78087e3ec55c64b0b3030d79102dfe5e622e09",
        "2025-09-01/rustc-nightly-x86_64-unknown-linux-gnu.tar.xz": "7f5486ae6ece8a734149e5fce6dc8f1bcdcb36b5c5cb53a819569109b445c700",
    },
    version = "nightly/2025-09-01",
)
use_repo(rust_host_tools, "rust_host_tools_nightly")

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
)
use_repo(crate, "crates")

# Repositories for binary artifacts. Add new `mdbook` plugins to the
# `binaries` repository, and if this fails due to conflicts in their
# dependencies, isolate it below with additional repositories.
crate.spec(
    artifact = "bin",
    package = "i18n-report",
    repositories = ["binaries"],
    version = "0.2.0",
)
crate.spec(
    artifact = "bin",
    package = "mdbook",
    repositories = ["binaries"],
    version = "0.5.3",
)
crate.spec(
    artifact = "bin",
    package = "mdbook-i18n-helpers",
    repositories = ["binaries"],
    version = "0.4.0",
)
crate.spec(
    artifact = "bin",
    package = "mdbook-linkcheck2",
    repositories = ["binaries"],
    version = "0.12.0",
)
crate.spec(
    artifact = "bin",
    package = "mdbook-pandoc",
    repositories = ["binaries"],
    version = "0.11.0",
)
crate.from_specs(
    name = "binaries",
    generate_binaries = True,
    host_tools = "@rust_host_tools_nightly",
)
use_repo(crate, "binaries")

# mdbook-svgbob depends transitively on sauron-core, which has a
# "=0.3.30" dependency on futures. This conflicts with other plugins.
crate.spec(
    artifact = "bin",
    package = "mdbook-svgbob",
    repositories = ["svgbob"],
    version = "0.3.0",
)
crate.from_specs(
    name = "svgbob",
    generate_binaries = True,
    host_tools = "@rust_host_tools_nightly",
)
use_repo(crate, "svgbob")

# The backdated_sources extension manages the retrieval of historical
# repository states. It ensures that each language's source files
# match its .po file timestamp.
backdated_sources = use_extension("//:backdated_sources.bzl", "backdated_sources")
backdated_sources.language(po = "//po:ar.po")
backdated_sources.language(po = "//po:bn.po")
backdated_sources.language(po = "//po:da.po")
backdated_sources.language(po = "//po:de.po")
backdated_sources.language(po = "//po:el.po")
backdated_sources.language(po = "//po:es.po")
backdated_sources.language(po = "//po:fa.po")
backdated_sources.language(po = "//po:fr.po")
backdated_sources.language(po = "//po:id.po")
backdated_sources.language(po = "//po:it.po")
backdated_sources.language(po = "//po:ja.po")
backdated_sources.language(po = "//po:ko.po")
backdated_sources.language(po = "//po:pl.po")
backdated_sources.language(po = "//po:pt-BR.po")
backdated_sources.language(po = "//po:ro.po")
backdated_sources.language(po = "//po:ru.po")
backdated_sources.language(po = "//po:tr.po")
backdated_sources.language(po = "//po:uk.po")
backdated_sources.language(po = "//po:vi.po")
backdated_sources.language(po = "//po:zh-CN.po")
backdated_sources.language(po = "//po:zh-TW.po")
use_repo(backdated_sources, "backdated_sources")
