module(
    name = "comprehensive-rust",
    version = "0.1.0",
)

bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_rust", version = "0.70.0")
bazel_dep(name = "rules_shell", version = "0.8.0")

# Remove when https://github.com/bazelbuild/rules_rust/pull/4019 is
# released and we update past version 0.70.0.
git_override(
    module_name = "rules_rust",
    commit = "d2d856d13f89f234298db1606ece7afd1c3eee1f",
    remote = "https://github.com/bazelbuild/rules_rust.git",
)

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    extra_target_triples = [
        "aarch64-unknown-none",
        "thumbv7em-none-eabihf",
    ],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

rust_host_tools = use_extension("@rules_rust//rust:extensions.bzl", "rust_host_tools")
rust_host_tools.host_tools(
    name = "rust_host_tools_nightly",
    sha256s = {
        "2025-09-01/cargo-nightly-x86_64-unknown-linux-gnu.tar.xz": "9a701f2eb103703c018518066fa7deb476f7ebab548b1c4e2ea0df81ee42a20f",
        "2025-09-01/clippy-nightly-x86_64-unknown-linux-gnu.tar.xz": "a55b532605896ed0a22f44d68c4eba8ba0ad66ea0f62f3c62469b0a3d01ab19c",
        "2025-09-01/llvm-tools-nightly-x86_64-unknown-linux-gnu.tar.xz": "a0da791e41770b888c60ef74a0c63c5f6fe11bddb2a8fa88075341a9acb442a6",
        "2025-09-01/rust-std-nightly-x86_64-unknown-linux-gnu.tar.xz": "b3c2d890d9405285e015ab4ceb78087e3ec55c64b0b3030d79102dfe5e622e09",
        "2025-09-01/rustc-nightly-x86_64-unknown-linux-gnu.tar.xz": "7f5486ae6ece8a734149e5fce6dc8f1bcdcb36b5c5cb53a819569109b445c700",
    },
    version = "nightly/2025-09-01",
)
use_repo(rust_host_tools, "rust_host_tools_nightly")

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
)
use_repo(crate, "crates")

# Repositories for mdbook plugins. Add new plugins to the
# `mdbook_plugins` repository. If this fails due to conflicts in their
# dependencies, isolate it below with additional repositories.
crate.spec(
    artifact = "bin",
    package = "mdbook-i18n-helpers",
    repositories = ["mdbook_plugins"],
    version = "0.4.0",
)
crate.spec(
    artifact = "bin",
    package = "mdbook-linkcheck2",
    repositories = ["mdbook_plugins"],
    version = "0.12.0",
)
crate.spec(
    artifact = "bin",
    package = "mdbook-pandoc",
    repositories = ["mdbook_plugins"],
    version = "0.11.0",
)
crate.from_specs(
    name = "mdbook_plugins",
    generate_binaries = True,
    host_tools = "@rust_host_tools_nightly",
)
use_repo(crate, "mdbook_plugins")

# mdbook-svgbob depends transitively on sauron-core, which has a
# "=0.3.30" dependency on futures. This conflicts with other plugins.
crate.spec(
    artifact = "bin",
    package = "mdbook-svgbob",
    repositories = ["svgbob_plugin"],
    version = "0.3.0",
)
crate.from_specs(
    name = "svgbob_plugin",
    generate_binaries = True,
    host_tools = "@rust_host_tools_nightly",
)
use_repo(crate, "svgbob_plugin")

# Bare-Metal and Microcontroller Examples
#
# Note: Host triple is required in supported_platform_triples below so
# cargo-bazel can invoke cargo tree on the host during splicing.
crate.from_cargo(
    name = "bare_metal_alloc_example",
    cargo_lockfile = "//src/bare-metal/alloc-example:Cargo.lock",
    manifests = ["//src/bare-metal/alloc-example:Cargo.toml"],
    supported_platform_triples = [
        "x86_64-unknown-linux-gnu",
        "aarch64-unknown-none",
    ],
)
use_repo(crate, "bare_metal_alloc_example")

crate.from_cargo(
    name = "bare_metal_aps",
    cargo_lockfile = "//src/bare-metal/aps/examples:Cargo.lock",
    manifests = ["//src/bare-metal/aps/examples:Cargo.toml"],
    supported_platform_triples = [
        "x86_64-unknown-linux-gnu",
        "aarch64-unknown-none",
    ],
)
use_repo(crate, "bare_metal_aps")

crate.from_cargo(
    name = "bare_metal_microcontrollers",
    cargo_lockfile = "//src/bare-metal/microcontrollers/examples:Cargo.lock",
    manifests = ["//src/bare-metal/microcontrollers/examples:Cargo.toml"],
    supported_platform_triples = [
        "x86_64-unknown-linux-gnu",
        "thumbv7em-none-eabihf",
    ],
)
use_repo(crate, "bare_metal_microcontrollers")

crate.from_cargo(
    name = "bare_metal_compass",
    cargo_lockfile = "//src/exercises/bare-metal/compass:Cargo.lock",
    manifests = ["//src/exercises/bare-metal/compass:Cargo.toml"],
    supported_platform_triples = [
        "x86_64-unknown-linux-gnu",
        "thumbv7em-none-eabihf",
    ],
)
use_repo(crate, "bare_metal_compass")

crate.from_cargo(
    name = "bare_metal_rtc",
    cargo_lockfile = "//src/exercises/bare-metal/rtc:Cargo.lock",
    manifests = ["//src/exercises/bare-metal/rtc:Cargo.toml"],
    supported_platform_triples = [
        "x86_64-unknown-linux-gnu",
        "aarch64-unknown-none",
    ],
)
use_repo(crate, "bare_metal_rtc")
