[package]
name = "exerciser"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Andrew Walbran <qwandor@google.com>"]
description = "A tool for extracting starter code for exercises from Markdown files."
repository = "https://github.com/google/comprehensive-rust"

[dependencies]
anyhow = "1.0.68"
log = "0.4.17"
pretty_env_logger = "0.4.0"
pulldown-cmark = { version = "0.9.2", default-features = false }
