load("@crates//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")

rust_library(
    name = "mdbook-course-lib",
    srcs = glob(["src/*.rs"]),
    crate_name = "mdbook_course",
    deps = all_crate_deps(normal = True),
)

rust_binary(
    name = "mdbook-course",
    srcs = ["src/bin/mdbook-course.rs"],
    visibility = ["//visibility:public"],
    deps = all_crate_deps(normal = True) + [
        ":mdbook-course-lib",
    ],
)
