[package]
name = "mdbook-course"
version = "0.1.0"
authors = ["Dustin Mitchell <djmitche@google.com>"]
edition = "2021"
license = "Apache-2.0"
publish = false
repository = "https://github.com/google/comprehensive-rust"
description = "An mdbook preprocessor for comprehensive-rust."

[dependencies]
anyhow = "1.0.89"
clap = "4.5.18"
lazy_static = "1.5"
log = "0.4.22"
matter = "0.1.0-alpha4"
mdbook = "0.4.40"
pretty_env_logger = "0.5.0"
regex = "1.11"
serde = "1.0.210"
serde_json = "1.0.128"
serde_yaml = "0.9"
