[package]
name = "mdbook-course"
version = "0.1.0"
authors = ["Dustin Mitchell <djmitche@google.com>"]
edition = "2024"
license = "Apache-2.0"
publish = false
repository = "https://github.com/google/comprehensive-rust"
description = "An mdbook preprocessor for comprehensive-rust."

[dependencies]
anyhow = "1.0.102"
clap = "4.5.60"
lazy_static = "1.5"
log = "0.4.29"
matter = "0.1.0-alpha4"
mdbook = "0.4.52"
pretty_env_logger = "0.5.0"
regex = "1.12"
serde = "1.0.228"
serde_json = "1.0.149"
serde_yaml = "0.9"
