[package]
name = "mdbook-exerciser"
version = "0.1.0"
authors = ["Andrew Walbran <qwandor@google.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/google/comprehensive-rust"
description = "A tool for extracting starter code for exercises from Markdown files."

[dependencies]
anyhow = "1.0.83"
log = "0.4.21"
mdbook = "0.4.37"
pretty_env_logger = "0.5.0"
pulldown-cmark = { version = "0.10.3", default-features = false }
