[package]
name = "mdbook-exerciser"
version = "0.1.0"
authors = ["Andrew Walbran <qwandor@google.com>"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/google/comprehensive-rust"
description = "A tool for extracting starter code for exercises from Markdown files."

[dependencies]
anyhow = "1.0.98"
log = "0.4.27"
mdbook = "0.4.48"
pretty_env_logger = "0.5.0"
pulldown-cmark = { version = "0.13.0", default-features = false }
