[package]
name = "mdbook-slide-evaluator"
version = "0.1.0"
authors = ["Michael Kerscher <kerscher@google.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/google/comprehensive-rust"
description = "A tool for evaluating mdbook slides by rendering the html pages and spot violations to the policies"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.18", features = ["derive"] }
csv = "1.3.0"
fantoccini = "0.21.2"
glob = "0.3.1"
log = "0.4.22"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.210", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = "0.7.12"
url = "2.5.2"
