[package]
name = "mdbook-slide-evaluator"
version = "0.1.0"
authors = ["Michael Kerscher <kerscher@google.com>"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/google/comprehensive-rust"
description = "A tool for evaluating mdbook slides by rendering the html pages and spot violations to the policies"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
csv = "1.3.1"
fantoccini = "0.21.4"
glob = "0.3.2"
log = "0.4.25"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.217", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = "0.7.13"
url = "2.5.4"
