load("@crates//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "parser",
    srcs = ["exercise.rs"],
    deps = all_crate_deps(normal = True),
)

rust_test(
    name = "parser_test",
    size = "small",
    crate = ":parser",
)
