[package]
name = "comprehensive-rust"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "dining-philosophers"
path = "concurrency/dining-philosophers.rs"

[[bin]]
name = "link-checker"
path = "concurrency/link-checker.rs"

[dependencies]
reqwest = { version = "0.12.2", features = ["blocking"] }
scraper = "0.19.0"
thiserror = "1.0.58"

[dev-dependencies]
tempfile = "3.10.1"
