load("@crates//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "android-testing",
    srcs = ["src/lib.rs"],
)

rust_test(
    name = "android-testing_test",
    size = "small",
    crate = ":android-testing",
)

rust_test(
    name = "googletest_example",
    size = "small",
    srcs = ["googletest.rs"],
    deps = all_crate_deps(normal = True),
)

rust_test(
    name = "mockall_example",
    size = "small",
    srcs = ["mockall.rs"],
    deps = all_crate_deps(normal = True),
)
