[package]
name = "async-control-flow"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "channels"
path = "channels.rs"

[[bin]]
name = "join"
path = "join.rs"

[[bin]]
name = "select"
path = "select.rs"

[dependencies]
anyhow = "1.0.81"
async-trait = "0.1.79"
futures = { version = "0.3.30", default-features = false }
reqwest = { version = "0.12.1", default-features = false }
tokio = { version = "1.36.0", features = ["full"] }
