[package]
name = "sync-exercises"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "dining-philosophers"
path = "dining-philosophers.rs"

[[bin]]
name = "link-checker"
path = "link-checker.rs"

[dependencies]
reqwest = { version = "0.12.15", features = ["blocking"] }
scraper = "0.23.1"
thiserror = "2.0.12"

[dev-dependencies]
tempfile = "3.19.1"
