[package]
name = "sync-exercises"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "dining-philosophers"
path = "dining-philosophers.rs"

[[bin]]
name = "link-checker"
path = "link-checker.rs"

[dependencies]
reqwest = { version = "0.12.24", features = ["blocking"] }
scraper = "0.24.0"
thiserror = "2.0.17"

[dev-dependencies]
tempfile = "3.23.0"
