[package]
name = "sync-exercises"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "dining-philosophers"
path = "dining-philosophers.rs"

[[bin]]
name = "link-checker"
path = "link-checker.rs"

[dependencies]
reqwest = { version = "0.13.2", features = ["blocking"] }
scraper = "0.25.0"
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.24.0"
