[workspace]

[package]
name = "ap-examples"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bitflags = "2.9.0"
log = "0.4.27"
smccc = "0.2.0"
spin = "0.10.0"

[build-dependencies]
cc = "1.2.17"

[[bin]]
name = "improved"
path = "src/main_improved.rs"

[[bin]]
name = "logger"
path = "src/main_logger.rs"

[[bin]]
name = "minimal"
path = "src/main_minimal.rs"

[[bin]]
name = "psci"
path = "src/main_psci.rs"
