[workspace]

[package]
name = "ap-examples"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
aarch64-paging = { version = "0.10.0", default-features = false }
aarch64-rt = "0.2.2"
arm-pl011-uart = "0.3.2"
bitflags = "2.9.3"
log = "0.4.27"
safe-mmio = "0.2.5"
smccc = "0.2.0"
spin = "0.10.0"
zerocopy = "0.8.26"

[[bin]]
name = "improved"
path = "src/main_improved.rs"

[[bin]]
name = "logger"
path = "src/main_logger.rs"

[[bin]]
name = "minimal"
path = "src/main_minimal.rs"

[[bin]]
name = "psci"
path = "src/main_psci.rs"

[[bin]]
name = "rt"
path = "src/main_rt.rs"

[[bin]]
name = "safemmio"
path = "src/main_safemmio.rs"
